--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
         max-page-size: 100
 
   datasource:
-    url: jdbc:h2:~/kakaopaydb
+    url: jdbc:h2:file:./src/test/resources/kakaopaydb
+#    url: jdbc:h2:~/kakaopaydb
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -20,7 +21,7 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
 
 #logging:
 #  level:
