--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -22,5 +22,8 @@ spring:
     hibernate:
       ddl-auto: none
 
-#logging:
-#  level:
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
