--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,18 @@ plugins {
 	id 'java'
 }
 
-group = 'com.demo'
+tasks.jar {
+	enabled = true
+}
+
+tasks.bootJar {
+	enabled = true
+	archiveClassifier.set("boot")
+	mainClassName = "com.kakaopay.spread.SpreadApplication"
+}
+
+
+group = 'com.kakaopay'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -17,7 +28,6 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
