--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,6 @@ spring:
   h2:
     console:
       enabled: true
-  data:
-    web:
-      pageable:
-        max-page-size: 100
-
   datasource:
     url: jdbc:h2:~/kakaopaydb
 
@@ -20,8 +15,7 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: none
-
+      ddl-auto: create-drop
 
 logging:
   level:
