--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,13 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	annotationProcessor 'org.projectlombok:lombok'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude module: "net.minidev"
+		compile group: 'com.googlecode.json-simple', name : 'json-simple', version: '1.1'
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
